--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ description: Personal Home Page
             <h1>{{site.title}}</h1>
 						<h2>Personal Home Page</h2>
 						<p>I am a quantative social science researcher interested in political science and economics.<br />
-						This website information provides information on me and my work</p>
+						This website provides information about my work</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
