--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,11 @@
 ---
 layout: cv
+title: Jakob Willisch - CV
+description: This is my CV
+sitemap:
+    priority: 0.7
+    lastmod: 2019-02-01
+    changefreq: weekly
 ---
 
 
