--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,9 @@ sitemap:
     lastmod: 2019-02-01
     changefreq: weekly
 ---
-
+<header class="major">
+	<h1>Research</h1>
+</header>
 
 {% include career-profile.html %}
 
